objects/LLC_BI__Site_Visit_Memo__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <description>This field is optional and is manually populated with the Site Visit&apos;s associated Relationship.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Site Visit Memos</relationshipLabel>
        <relationshipName>Site_Visit_Memos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Action_Items__c</fullName>
        <description>This field is optional and is for user narrative describing follow-up actions that result from the Site Visit. It is manually populated.</description>
        <inlineHelpText>What are the action items for follow-up?</inlineHelpText>
        <label>Action Items</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Customer_Flow__c</fullName>
        <description>This field is optional and is for user narrative describing customer interaction during the Site Visit. It is manually populated.</description>
        <inlineHelpText>Did you see customers in the office?  What is the feel for customer flow?</inlineHelpText>
        <label>Customer Activity</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Send_When_Saved__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box when you&apos;re ready to have the Site Visit Memo be e-mailed out to everyone once you save.</description>
        <inlineHelpText>Check this box when you&apos;re ready to have the Site Visit Memo be e-mailed out to everyone once you save.</inlineHelpText>
        <label>Send When Saved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Servicing_Officer__c</fullName>
        <description>This field is optional and specifies the name of the bank representative who performed the Site Visit. It is manually populated.</description>
        <inlineHelpText>The name of the person who made the visit</inlineHelpText>
        <label>Servicing Officer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Site_Status__c</fullName>
        <description>This field is optional and specifies the condition of the subject property. It is manually populated.</description>
        <inlineHelpText>Was the office in good condition?</inlineHelpText>
        <label>Office Condition</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Visit_Date__c</fullName>
        <description>This field is optional and specifies the date of the Site Visit.</description>
        <inlineHelpText>The date in which you actually visited the site.</inlineHelpText>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Visit_Description__c</fullName>
        <description>This field is optional and is for user narrative describing the Site Visit. It is manually populated.</description>
        <inlineHelpText>What happened during the site visit?</inlineHelpText>
        <label>Visit Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Visit_Objective__c</fullName>
        <description>This field is optional and specifies the Site Visit&apos;s object. It is manually populated.</description>
        <label>Visit Objective</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Watchlist_History__c</fullName>
        <description>This field is optional and is for user narrative that provides background of the loan. It is manually populated.</description>
        <inlineHelpText>How did we get here?  What is the history of this loan?</inlineHelpText>
        <label>Watchlist History</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <label>Site Visit Memo</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Site-Visit-{000}</displayFormat>
        <label>Site Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Visit Memos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>